# gmail-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  release-please-config.json  ruff.toml
.github/workflows/: ci.yml
src/gmail_mcp/: __init__.py  auth.py  client.py  exceptions.py  server.py  setup.py  tools.py
tests/: conftest.py  test_auth.py  test_client.py  test_setup.py  test_tools.py
